fix: move Verb LOOK to MOVEMENT VerbCategory so correct controller is called. chore: add memory limit to client gradle build to threshold memory leaks. feat: remove additional "quit" command synonyms. feat: add valid json file check to load() method in JsonWorldLoader to prevent errors where files may not exist. now defaults to example.json. chore: update gitignore to keep saves dir, but exclude save game files from being tracked. feat: add check to move() method to ensure direction token is valid.